...
    buttonSection: @Composable () -> Unit,
) {
    val titleValidationResult = cardEditorState.titleValidationResult
    val tagValidationResult = cardEditorState.tagValidationResult

    OutlinedCard(
        modifier = modifier.testTag("모달 열림"),
    ) {
        Column(
            modifier = Modifier.background(DefaultBackground),
        ) {
            CardHeaderSection(
                title = title,
...
                    placeholder = "태스크 제목을 입력하세요",
                    contents = cardEditorState.title,
                    onTextChange = {
                        onCardEditorStateChange(cardEditorState.copy(title = it))
                    },
                    showAdditionalInfo = titleValidationResult !is TitleValidationResult.Valid,
                    testTag = "titleTextField",
                    infoText = titleValidationResult.message(),
                    isError = titleValidationResult !is TitleValidationResult.Valid,
                )

                CardEditorFormSection(
                    title = "설명",
                    placeholder = "태스크에 대한 자세한 설명을 입력하세요",
                    contents = cardEditorState.content,
                    onTextChange = {
                        onCardEditorStateChange(cardEditorState.copy(content = it))
                    },
                    testTag = "descriptionTextField",
                )

                CardEditorFormSection(
                    title = "태그",
                    placeholder = "태그를 쉼표로 구분하여 입력하세요 (예: 버그, 긴급)",
                    contents = cardEditorState.tagInput,
                    onTextChange = {
                        onCardEditorStateChange(cardEditorState.copy(tagInput = it))
                    },
                    showAdditionalInfo = true,
                    testTag = "tagTextField",
                    infoText = tagValidationResult.message(),
                    isError = tagValidationResult !is TagValidationResult.Valid,
                )

                CardStateSection(
                    selectedState = cardEditorState.taskState,
...
