package woowacourse.kanban.board.model

enum class Nickname {
    NONE,
    DINO,
    PAMES,
}
